# ho-lok-oe-chu-im

./: .gitignore  Han-Ggi.xlsx  M100.ipynb  Pipfile  change_zu_im.ipynb  convert.ipynb  ex-01.ipynb  ex-02.ipynb  get_token_from_string.ipynb  han_ji_chu_im.py  hiunn_hue.dict.yaml  hiunn_hue.schema.yaml  hiunn_hue_TPS.schema.yaml  ho-lok-oe.schema.yaml  ho-lok-oe.txt  ho_lok_oe.dict.yaml  ho_lok_oe.schema.yaml  ho_lok_oe.schema.yaml.bak  hoo-goa-chu-im.txt  hoo-goa-chu-im.xlsx  hoo-goa-chu-im_tmp.xlsx  import_notebook_as_module.ipynb  loop_in_range.ipynb  nga_siok_thong_sip_ngoo_im.dict.yaml  nga_siok_thong_sip_ngoo_im.txt  p000_convert_dict.ipynb  p01_import_source_data.ipynb  p03_convert_tai_gi_bopomo.ipynb  p100_cha_ji_tian.ipynb  p110.ipynb  p110_hoo_goa_chu_im.ipynb  p120_hoo_goa_TPS_chu_im.ipynb  p150_poo_chu_im.ipynb  p200_cha_ji_tian.ipynb  p210_hoo_goa_chu_im.ipynb  p210_hoo_goa_chu_im_all.ipynb  p210_hoo_goa_sip_ngoo_im_chu_im.ipynb  p211_hoo_goa_chu_im.ipynb  p220_hoo_goa_chu_im__TPS.ipynb  p220_hoo_goa_chu_im__sip_ngoo_im.ipynb  (+11 more)
.ipynb_checkpoints/: ex-01-checkpoint.ipynb  quick_start_01-checkpoint.ipynb
Ji-Koo/: nga_siok_thang_tai_lo.xlsx
examples/: get_token_from_string.ipynb  loop_in_range.ipynb  loop_in_range.py  my-pandas.ipynb  my-pscopg2.ipynb  p101.ipynb  xlwings_basic.ipynb
modules/demoB/: test2.py
modules/my_libs/: han_ji_chu_im.ipynb  han_ji_chu_im.py  han_ji_chu_im__test.ipynb  han_ji_chu_im_python.py  import_ipynb.py
nbpackage/: han_ji_chu_im.ipynb  lib000_import_source_data.ipynb  lib010_cha_ji_tian.ipynb  lib100_hoo_goa_chu_im_all.ipynb
python/: .pylintrc  config.env  m000_予我漢字注音.py  m100.py  m200_查字典.py  m300_標注音.py  p01_import_source_data.py  p100_cha_ji_tian.py  p210_hoo_goa_chu_im_all.py  pyproject.toml  pyrightconfig.json  settings.py  《姜伯約歸降孔明，武鄉侯罵死王朗》.xlsx  【河洛話注音】原道．韓愈.xlsx  【河洛話注音】滕王閣序．王勃.xlsx  京口北固亭懷古.xlsx
python/_archived/: pyproject.toml
tools/: dictionary_tool.xlsx  han_ji_khoo-import.sql  han_ji_khoo.sql  nga_siok_thong_sip_ngoo_im.csv  雅俗通字庫.xlsx
